--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,6 +18,8 @@ body {
 }
 
 #header {
+    display: flex;
+    align-items: center;
     position: fixed;
     top: 0;
     left: 300px;
@@ -25,6 +27,10 @@ body {
     background-color: black;
     color: white;
     padding: 1rem 3rem;
+}
+
+#header h1 {
+    flex-grow: 1;
 }
 
 #drawer {
